--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="ok">Ok</string>
     <string name="cancel">Cancel</string>
     <string name="check_internet_connection">Please check your connection and try again.</string>
+    <string name="logo">Logo</string>
+    <string name="biometric_authentication">Biometric Authentication</string>
+    <string name="login_biometric_credential">Log in using your biometric credential</string>
+    <string name="login_password">Log in using your password</string>
 </resources>
