--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,30 @@
     <string name="biometric_authentication">Biometric Authentication</string>
     <string name="login_biometric_credential">Log in using your biometric credential</string>
     <string name="login_password">Log in using your password</string>
+    <string name="search">Search</string>
+    <string name="go_back">Go Back</string>
+    <string name="preferences">Preferences</string>
+    <string name="notifications">Notifications</string>
+    <string name="notifications_desc">Turn on/off notifications</string>
+    <string name="theme">Theme</string>
+    <string name="theme_desc">Adjust theme of the app</string>
+    <string name="currency">Currency</string>
+    <string name="currency_desc">Choose your preferred currency</string>
+    <string name="language">Language</string>
+    <string name="language_desc">Set your language</string>
+    <string name="app_icon">App Icon</string>
+    <string name="app_icon_desc">Customize your app icon</string>
+    <string name="security">Security</string>
+    <string name="biometrics">Biometrics</string>
+    <string name="biometrics_desc">Enable biometric authentication</string>
+    <string name="account">Account</string>
+    <string name="reset_account">Reset Account</string>
+    <string name="reset_account_desc">Delete all information</string>
+    <string name="not_found">No items found</string>
+    <string name="usd">USD</string>
+    <string name="brl">BRL</string>
+    <string name="eur">EUR</string>
+    <string name="usd_symbol">$</string>
+    <string name="brl_symbol">R$</string>
+    <string name="eur_symbol">€</string>
 </resources>
